fixed spacing between tile icons and value. wrote description for bias tile

--- a/client/AnalyticsTile.scss
+++ b/client/AnalyticsTile.scss
@@ -32,6 +32,7 @@
   img {
     width: 50px;
     height: auto;
+    margin-bottom: 1rem;
   }
 
 .tile-value {
